--- a/schedule.html
+++ b/schedule.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>My Schedule</title>
+    <title>Schedule Page</title>
     <style>
 body {
     font-family: cursive;
