--- a/welcome.html
+++ b/welcome.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Mugambi's Portfolio</title>
+    <title>Welcome Page (52)</title>
     <style>
 body {
+    font-family: cursive;
     margin: 0;
     background: linear-gradient(to right, #183D3D, #000000);
     display: flex;
     justify-content: center;
-    font-family: cursive;
 }
 
 .info {
@@ -51,6 +51,7 @@ body {
 .info p {
     color: #7A7A7A;
     line-height: 1.5em;
+    font-size: 1em;
 }
 
 .schedule-btn {
@@ -68,7 +69,6 @@ body {
     color: inherit;
     text-decoration: none;
     font-family: cursive;
-
 }
 
 .schedule-btn:hover {
@@ -79,16 +79,19 @@ body {
 .hero-heading{
     font-size: 0.5em;
 }
-
     </style>
 
 </head>
 <body>
         <div class="info">
             <h1><span class="hero-heading">Welcome to my website. I'm <br></span> Patience Mugambi</h1>
+
             <h2 class="typing-text">Software Developer</h2>
+
             <p>With over 2 years in web development, I've mastered skills crucial for building comprehensive tech solutions.</p>
+
             <p>My expertise lies in front-end development with JavaScript, React, and Redux, alongside proficiency in WordPress for content management. I bridge the gap between user interface and functionality with my well-rounded skillset that includes SQL databases, Python scripting, and frameworks like Flask for building dynamic backends. <br> This empowers me to not only craft beautiful and interactive user interfaces but also ensure a smooth and efficient data flow behind the scenes.</p>
+
             <button class="schedule-btn"><a href="schedule.html">View Schedule</a></button>
         </div>        
 </body>
